--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-torch==2.0.1
-torchvision==0.15.2
-torchaudio==2.0.2
 pytorch-lightning==2.0.3
-numpy==1.23.3
+transformers==4.30.2
+lightning-transformers==0.2.5
+scikit-learn==1.1.2
 pandas==1.4.4
-tqdm==4.62.1
+tqdm==4.65.0
 fastapi==0.97.0
+kaggle==1.5.13
