--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,8 @@ pandas==1.4.4
 tqdm==4.65.0
 fastapi==0.97.0
 unicorn==1.0.3
-uvloop==0.17.0
+# uvloop==0.17.0
 httptools==0.1.2
 kaggle==1.5.13
+plotly==5.15.0
+wordcloud==1.9.2
